--- a/css/airism-styles.css
+++ b/css/airism-styles.css
@@ -585,6 +585,7 @@ body {
 #container .product-container .product-wrapper .product-hero h3 {
   margin-bottom: 10px;
   font-size: 24px;
+  text-transform: initial;
 }
 
 @media only screen and (max-width: 768px) {
