--- a/css/airism-styles.scss
+++ b/css/airism-styles.scss
@@ -427,6 +427,7 @@ body {
         h3 {
           margin-bottom: 10px;
           font-size: 24px;
+          text-transform: initial;
           @media only screen and (max-width: 768px) {
             font-size: 20px;
             padding: 0 3%;
