--- a/css/airism-styles.css
+++ b/css/airism-styles.css
@@ -518,10 +518,18 @@ body {
 #container #all-products .wrapper {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[4];
-      grid-template-columns: repeat(4, 1fr);
+  -ms-grid-columns: (1fr)[5];
+      grid-template-columns: repeat(5, 1fr);
+  gap: 15px 0;
   max-width: 600px;
   margin: 40px auto;
+}
+
+@media only screen and (max-width: 768px) {
+  #container #all-products .wrapper {
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 #container #all-products .wrapper p {
@@ -548,6 +556,19 @@ body {
 @media only screen and (max-width: 768px) {
   #container .product-container h2 {
     padding: 0px 3%;
+  }
+}
+
+#container .product-container .ptt-p {
+  text-align: center;
+  margin: 0px auto;
+  margin: 20px auto 50px;
+  max-width: 800px;
+}
+
+@media only screen and (max-width: 768px) {
+  #container .product-container .ptt-p {
+    padding: 0 3%;
   }
 }
 
