--- a/css/airism-styles.scss
+++ b/css/airism-styles.scss
@@ -387,9 +387,13 @@ body {
     }
     .wrapper {
       display: grid;
-      grid-template-columns: repeat(4, 1fr);
+      grid-template-columns: repeat(5, 1fr);
+      gap: 15px 0;
       max-width: 600px;
       margin: 40px auto;
+      @media only screen and (max-width: 768px) {
+        grid-template-columns: repeat(3, 1fr);
+      }
       p {
         margin-top: 10px;
         text-transform: uppercase;
@@ -407,6 +411,16 @@ body {
       text-align: center;
       @media only screen and (max-width: 768px) {
         padding: 0px 3%;
+      }
+    }
+    .ptt-p {
+      text-align: center;
+      margin: 0px auto;
+      margin: 20px auto 50px;
+      max-width: 800px;
+
+      @media only screen and (max-width: 768px) {
+        padding: 0 3%;
       }
     }
     .product-wrapper {
@@ -433,6 +447,7 @@ body {
             padding: 0 3%;
           }
         }
+
         p {
           margin-bottom: 20px;
           font-size: 16px;
